--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.9.0",
     "ccxt": "^1.40.29",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "nanoid": "^3.1.20",
+    "ws": "^7.4.2"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
