--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@influxdata/influxdb-client": "^1.9.0",
     "ccxt": "^1.40.29",
     "dotenv": "^8.2.0",
+    "loglevel": "^1.7.1",
     "nanoid": "^3.1.20",
     "ws": "^7.4.2"
   },
