--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "loglevel": "^1.7.1",
     "nanoid": "^3.1.20",
+    "reconnecting-websocket": "^4.4.0",
     "ws": "^7.4.2"
   },
   "devDependencies": {
